<resources>
    <string name="app_name">Uptune</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="StartRegister">Register Start</string>
    <string name="Nickname">Nickname</string>
    <string name="SentAuth">The auth code is sent to your inbox.</string>
    <string name="AuthCode">Auth Code</string>
    <string name="SendAuth">Auth</string>
    <string name="LegalInform">"If you click this button, we will accept that you agreed to our terms and conditions.
        https://jhseo1107.kro.kr/uptune/legal.jsp "
    </string>
    <string name="Classes">Classes -></string>
    <string name="Trends">Trend -></string>
    <string name="KitPurchases">Purchase Kits -></string>
    <string name="Level1">Lv. 1</string>
    <string name="Level2">Lv. 2</string>
    <string name="Level3">Lv. 3</string>
    <string name="KitLevel">Kit Level</string>
    <string name="Kit1Info1">∙ For kids</string>
    <string name="Kit1Info2">∙ Easy to make</string>
    <string name="Kit1Info3">∙ Fusion of music and crafting</string>
    <string name="Kit2Info1">∙ For teens</string>
    <string name="Kit2Info2">∙ Make my own instrument</string>
    <string name="Kit2Info3">∙ Hard but high quality</string>
    <string name="Kit3Info1">∙ For adults</string>
    <string name="Kit3Info2">∙ Highest quality</string>
    <string name="Kit3Info3">∙ Available for leisure</string>
    <string name="Nothing">There is nothing here.</string>
    <string name="AutoLogin">Auto Login</string>
    <string name="Logout">Logout</string>
    <string name="Close">Close</string>
    <string name="PopTrends">Popular Videos -></string>
    <string name="RecTrends">Recent Videos -></string>
    <string name="UploadVid">Upload Video</string>
    <string name="VideoTitle">Video Title</string>
    <string name="SelectVid">Select Video</string>
</resources>
