<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <TextView
            android:text="@string/StartRegister"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/startRegisterTextView" tools:layout_editor_absoluteY="32dp"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="110dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"
    />
    <ImageView
            android:layout_width="0dp"
            android:layout_height="90dp" app:srcCompat="@drawable/logolong" android:id="@+id/imageView2"
            android:scaleType="fitXY"
            tools:layout_editor_absoluteY="48dp" tools:layout_editor_absoluteX="125dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/startRegisterTextView"
            app:layout_constraintEnd_toEndOf="@id/startRegisterTextView"
            app:layout_constraintVertical_bias="0.05"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/idText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintWidth_percent="0.6"
            android:hint="@string/Email"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/nameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintWidth_percent="0.6"
            android:hint="@string/Nickname"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintWidth_percent="0.6"
            android:hint="@string/Password"
    />
    <Button
            android:text="@string/Register"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/registerButton" tools:layout_editor_absoluteY="468dp"
            android:onClick="onRegister"
            tools:layout_editor_absoluteX="101dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintVertical_bias="0.625"
    />
    <TextView
            android:text="@string/SentAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mailInformTextView" tools:layout_editor_absoluteY="626dp"
            android:textSize="15sp"
            android:textColor="@color/alertRed"
            android:visibility="gone"
            tools:layout_editor_absoluteX="166dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.7"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/authText"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintWidth_percent="0.6"
            android:hint="@string/AuthCode"
    />
    <Button
            android:text="@string/SendAuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/authButton"
            android:onClick="onAuth"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintVertical_bias="0.825"
    />
    <TextView
            android:text="@string/LegalInform"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/legalInformTextView"
            android:textSize="15sp"
            android:linksClickable="true"
            android:autoLink="web"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.6"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>