<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VideoUploadActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/topBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
    >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp" app:srcCompat="@drawable/logolong"
                android:id="@+id/topLongLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:text="@string/UploadVid"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="40sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/VideoTitle"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:ems="10"
                    android:id="@+id/vidTitleEditText"/>
            <Button
                    android:text="@string/SelectVid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/vidSelectButton"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:onClick="onSelectVidClick"
            />
            <Button
                    android:text="@string/UploadVid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/vidUploadButton"
                    android:layout_marginTop="50sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:onClick="onUploadVidClick"
            />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>